--- a/mod_main/src/main/res/values/strings.xml
+++ b/mod_main/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
-    <string name="app_name">WanAndroidYj</string>
-    <string name="mod_main_name">ModMain</string>
-
+    <string name="app_name">ST</string>
     <string name="tab_home">首页</string>
     <string name="tab_categories">分类</string>
     <string name="tab_system">体系</string>
@@ -32,4 +30,6 @@
     <string name="mine_compose">Compose</string>
     <string name="mine_mvc">MVC模式</string>
     <string name="mine_mvp">MVP模式</string>
+    <string name="mod_main_name">Mod_Main</string>
+
 </resources>
